tests/rosetta/out/Java/babylonian-spiral.error
javac: exit status 1
/tmp/BabylonianSpiral.java:9: error: incompatible types: String cannot be converted to int
        while (i > 0 && String.valueOf(((List)h.get(i - 1)).get("s")).compareTo(String.valueOf(((List)h.get(i)).get("s"))) > 0) {
                                                                ^
/tmp/BabylonianSpiral.java:9: error: incompatible types: String cannot be converted to int
        while (i > 0 && String.valueOf(((List)h.get(i - 1)).get("s")).compareTo(String.valueOf(((List)h.get(i)).get("s"))) > 0) {
                                                                                                                    ^
/tmp/BabylonianSpiral.java:10: error: incompatible types: Map<String,Integer> cannot be converted to List<Map<String,Integer>>
            List<Map<String,Integer>> tmp = h.get(i - 1);
                                                 ^
/tmp/BabylonianSpiral.java:12: error: incompatible types: List<Map<String,Integer>> cannot be converted to Map<String,Integer>
            h.set(i, tmp);
                     ^
/tmp/BabylonianSpiral.java:18: error: incompatible types: String cannot be converted to int
        while (Objects.equals(h.size(), 0) || String.valueOf(nv * nv).compareTo(String.valueOf(((List)h.get(0)).get("s"))) <= 0) {
                                                                                                                    ^
/tmp/BabylonianSpiral.java:19: error: cannot find symbol
            h = push(h, new H(nv * nv, nv, 0));
                            ^
  symbol:   class H
  location: class BabylonianSpiral
/tmp/BabylonianSpiral.java:22: error: incompatible types: String cannot be converted to int
        List<Map<String,Integer>> s = ((List)h.get(0)).get("s");
                                                           ^
/tmp/BabylonianSpiral.java:24: error: incompatible types: String cannot be converted to int
        while (h.size() > 0 && Objects.equals(((List)h.get(0)).get("s"), s)) {
                                                                   ^
/tmp/BabylonianSpiral.java:25: error: incompatible types: Map<String,Integer> cannot be converted to List<Map<String,Integer>>
            List<Map<String,Integer>> it = h.get(0);
                                                ^
/tmp/BabylonianSpiral.java:27: error: incompatible types: String cannot be converted to int
            v.add(Arrays.asList(it.get("a"), it.get("b")));
                                       ^
/tmp/BabylonianSpiral.java:27: error: incompatible types: String cannot be converted to int
            v.add(Arrays.asList(it.get("a"), it.get("b")));
                                                    ^
/tmp/BabylonianSpiral.java:28: error: incompatible types: String cannot be converted to int
            if (String.valueOf(it.get("a")).compareTo(String.valueOf(it.get("b"))) > 0) {
                                      ^
/tmp/BabylonianSpiral.java:28: error: incompatible types: String cannot be converted to int
            if (String.valueOf(it.get("a")).compareTo(String.valueOf(it.get("b"))) > 0) {
                                                                            ^
/tmp/BabylonianSpiral.java:29: error: cannot find symbol
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                ^
  symbol:   class H
  location: class BabylonianSpiral
/tmp/BabylonianSpiral.java:29: error: incompatible types: String cannot be converted to int
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                           ^
/tmp/BabylonianSpiral.java:29: error: incompatible types: String cannot be converted to int
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                                                                 ^
/tmp/BabylonianSpiral.java:29: error: bad operand types for binary operator '*'
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                                               ^
  first type:  Number
  second type: double
/tmp/BabylonianSpiral.java:29: error: incompatible types: String cannot be converted to int
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                                                                                                                                         ^
/tmp/BabylonianSpiral.java:29: error: incompatible types: String cannot be converted to int
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                                                                                                                                                                                                             ^
/tmp/BabylonianSpiral.java:29: error: bad operand types for binary operator '*'
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                                                                                                                                                                                 ^
  first type:  Number
  second type: double
/tmp/BabylonianSpiral.java:29: error: incompatible types: String cannot be converted to int
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                                                                                                                                                                                                                                                                                                  ^
/tmp/BabylonianSpiral.java:29: error: incompatible types: String cannot be converted to int
                h = push(h, new H(((Number)((Number)it.get("a")).doubleValue() * ((Number)it.get("a")).doubleValue()).doubleValue() + ((Number)((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue() * ((Number)(((Number)it.get("b")).doubleValue() + 1)).doubleValue()).doubleValue(), it.get("a"), ((Number)it.get("b")).doubleValue() + 1));
                                                                                                                                                                                                                                                                                                            ^
/tmp/BabylonianSpiral.java:57: error: bad operand types for binary operator '*'
            int cross = ((Number)((Number)p.get(0)).doubleValue() * ((Number)dir.get(1)).doubleValue()).doubleValue() - ((Number)((Number)p.get(1)).doubleValue() * ((Number)dir.get(0)).doubleValue()).doubleValue();
                                                                  ^
  first type:  Number
  second type: double
/tmp/BabylonianSpiral.java:57: error: bad operand types for binary operator '*'
            int cross = ((Number)((Number)p.get(0)).doubleValue() * ((Number)dir.get(1)).doubleValue()).doubleValue() - ((Number)((Number)p.get(1)).doubleValue() * ((Number)dir.get(0)).doubleValue()).doubleValue();
                                                                                                                                                                  ^
  first type:  Number
  second type: double
/tmp/BabylonianSpiral.java:59: error: bad operand types for binary operator '*'
                int dot = ((Number)((Number)p.get(0)).doubleValue() * ((Number)dir.get(0)).doubleValue()).doubleValue() + ((Number)((Number)p.get(1)).doubleValue() * ((Number)dir.get(1)).doubleValue()).doubleValue();
                                                                    ^
  first type:  Number
  second type: double
/tmp/BabylonianSpiral.java:59: error: bad operand types for binary operator '*'
                int dot = ((Number)((Number)p.get(0)).doubleValue() * ((Number)dir.get(0)).doubleValue()).doubleValue() + ((Number)((Number)p.get(1)).doubleValue() * ((Number)dir.get(1)).doubleValue()).doubleValue();
                                                                                                                                                                    ^
  first type:  Number
  second type: double
/tmp/BabylonianSpiral.java:66: error: cannot find symbol
        return new DHeapN(best, h, nv);
                   ^
  symbol:   class DHeapN
  location: class BabylonianSpiral
/tmp/BabylonianSpiral.java:81: error: incompatible types: Map cannot be converted to String
            nv = (int)(Integer.parseInt(((Map)st.get("n"))));
                                         ^
/tmp/BabylonianSpiral.java:101: error: incompatible types: List<Integer> cannot be converted to List<List<Integer>>
            List<List<Integer>> p = pts.get(i);
                                           ^
/tmp/BabylonianSpiral.java:102: error: incompatible types: String cannot be converted to Number
            String s = pad(((Number)((Number)((Number)"(" + ((Number)String.valueOf(p.get(0))).doubleValue()).doubleValue() + ", ").doubleValue() + ((Number)String.valueOf(p.get(1))).doubleValue()).doubleValue() + ")", 10);
                                                      ^
/tmp/BabylonianSpiral.java:102: error: incompatible types: String cannot be converted to Number
            String s = pad(((Number)((Number)((Number)"(" + ((Number)String.valueOf(p.get(0))).doubleValue()).doubleValue() + ", ").doubleValue() + ((Number)String.valueOf(p.get(1))).doubleValue()).doubleValue() + ")", 10);
                                                                                   ^
/tmp/BabylonianSpiral.java:102: error: cannot find symbol
            String s = pad(((Number)((Number)((Number)"(" + ((Number)String.valueOf(p.get(0))).doubleValue()).doubleValue() + ", ").doubleValue() + ((Number)String.valueOf(p.get(1))).doubleValue()).doubleValue() + ")", 10);
                                                                                                                                   ^
  symbol:   method doubleValue()
  location: class String
/tmp/BabylonianSpiral.java:102: error: incompatible types: String cannot be converted to Number
            String s = pad(((Number)((Number)((Number)"(" + ((Number)String.valueOf(p.get(0))).doubleValue()).doubleValue() + ", ").doubleValue() + ((Number)String.valueOf(p.get(1))).doubleValue()).doubleValue() + ")", 10);
                                                                                                                                                                           ^
Note: /tmp/BabylonianSpiral.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
Note: Some messages have been simplified; recompile with -Xdiags:verbose to get full output
33 errors
